--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "docs": "documentation readme index.js --section=API"
+    "docbuild": "documentation readme index.js --section=API"
   },
   "repository": {
     "type": "git",
