--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "test": "jest",
     "docbuild": "documentation readme index.js --section=API"
   },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/benjaminwoods/tmbr.git"
   },
   "keywords": [
     "kill",
+    "process",
     "tree"
   ],
   "author": "Benjamin Woods",
