--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ addons:
       - ubuntu-toolchain-r-test
     packages:
       - g++-4.8
-if: type = pull_request
+if: type = pull_request OR branch = main
